Crash in filebrowser, when opening file from the user preferences or render window, and an error popup is displayed #73487

Closed
opened 2020-01-29 11:55:17 +01:00 by Damien Picard · 10 comments
Member

System Information
Operating system: Linux-5.3.0-29-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 660M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.50

Blender Version
Broken: version: 2.83 (sub 1), branch: master, commit date: 2020-01-29 10:19, hash: 3ee219b845
Broken: version: 2.81
Worked: 2.80

Short description of error
Blender crashes when opening a file from the user preferences or render window, and an error popup is displayed in the main window.

Exact steps for others to reproduce the error

  • From --factory-startup
  • Open User Preferences
  • Call Open… (Ctrl O)
  • In the filebrowser, select a non-existing file ending with .blend
  • Press Enter to confirm (do not click the Open button)
    • An error message appears: Cannot read file '/test.blend': No such file or directory
  • Without moving the cursor, so that the error popup is still displayed, call Open… again
    • Blender crashes.

Upon crash there are — sometimes — two Python tracebacks:

Traceback (most recent call last):
  File "/home/damien/blender-git/build_linux/bin/2.83/scripts/startup/bl_ui/space_filebrowser.py", line 306, in poll
    return context.space_data.params.use_library_browsing and panel_poll_is_upper_region(context.region)
AttributeError: 'NoneType' object has no attribute 'params'

location: <unknown location>:-1

location: <unknown location>:-1

and the following, which appears several times:

Traceback (most recent call last):
  File "/home/damien/blender-git/build_linux/bin/2.83/scripts/startup/bl_ui/space_filebrowser.py", line 282, in poll
    return not context.preferences.filepaths.hide_recent_locations and panel_poll_is_upper_region(context.region)
  File "/home/damien/blender-git/build_linux/bin/2.83/scripts/startup/bl_ui/space_filebrowser.py", line 161, in panel_poll_is_upper_region
    return region.alignment in {'LEFT', 'RIGHT'}
AttributeError: 'NoneType' object has no attribute 'alignment'

location: <unknown location>:-1

blender.crash.txt

**System Information** Operating system: Linux-5.3.0-29-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 660M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.50 **Blender Version** Broken: version: 2.83 (sub 1), branch: master, commit date: 2020-01-29 10:19, hash: `3ee219b845` Broken: version: 2.81 Worked: 2.80 **Short description of error** Blender crashes when opening a file from the user preferences or render window, and an error popup is displayed in the main window. **Exact steps for others to reproduce the error** - From --factory-startup - Open User Preferences - Call Open… (`Ctrl O`) - In the filebrowser, select a non-existing file *ending with .blend* - Press `Enter` to confirm (do not click the Open button) - An error message appears: `Cannot read file '/test.blend': No such file or directory` - Without moving the cursor, so that the error popup is still displayed, call Open… again - Blender crashes. ----- Upon crash there are — sometimes — two Python tracebacks: ``` Traceback (most recent call last): File "/home/damien/blender-git/build_linux/bin/2.83/scripts/startup/bl_ui/space_filebrowser.py", line 306, in poll return context.space_data.params.use_library_browsing and panel_poll_is_upper_region(context.region) AttributeError: 'NoneType' object has no attribute 'params' location: <unknown location>:-1 location: <unknown location>:-1 ``` and the following, which appears several times: ``` Traceback (most recent call last): File "/home/damien/blender-git/build_linux/bin/2.83/scripts/startup/bl_ui/space_filebrowser.py", line 282, in poll return not context.preferences.filepaths.hide_recent_locations and panel_poll_is_upper_region(context.region) File "/home/damien/blender-git/build_linux/bin/2.83/scripts/startup/bl_ui/space_filebrowser.py", line 161, in panel_poll_is_upper_region return region.alignment in {'LEFT', 'RIGHT'} AttributeError: 'NoneType' object has no attribute 'alignment' location: <unknown location>:-1 ``` [blender.crash.txt](https://archive.blender.org/developer/F8309685/blender.crash.txt)
Author
Member

Added subscriber: @pioverfour

Added subscriber: @pioverfour
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

By "immediatly afterwards" you mean while the error popup is still open? Then yes, I can reproduce it, otherwise not.
I do not get the python errors, but maybe that is because Blender crashes earlier for me.

By "immediatly afterwards" you mean while the error popup is still open? Then yes, I can reproduce it, otherwise not. I do not get the python errors, but maybe that is because Blender crashes earlier for me.
Author
Member

In #73487#861721, @JacquesLucke wrote:
By "immediatly afterwards" you mean while the error popup is still open? Then yes, I can reproduce it, otherwise not.

Yes, that seems to be the case. Updating description.

I do not get the python errors, but maybe that is because Blender crashes earlier for me.

I tried again, and the Python errors don’t happen each time. I couldn’t tell in which case they do, though.

> In #73487#861721, @JacquesLucke wrote: > By "immediatly afterwards" you mean while the error popup is still open? Then yes, I can reproduce it, otherwise not. Yes, that seems to be the case. Updating description. > I do not get the python errors, but maybe that is because Blender crashes earlier for me. I tried again, and the Python errors don’t happen each time. I couldn’t tell in which case they do, though.
Damien Picard changed title from Crash in filebrowesr, when opening file from the user preferences or render window, and a non-existing blend file was specified before to Crash in filebrowser, when opening file from the user preferences or render window, and a non-existing blend file was specified before 2020-01-29 13:04:34 +01:00
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Author
Member

Based on @JacquesLucke’s answer, this crash actually seems to happen when any error popup is displayed.
For instance:

  • Open User Preferences
  • In main window, open a text editor and execute some invalid Python code
  • Switch to the preferences window without moving the mouse (e.g. Alt + Tab)
  • Open…
    • Don’t Save
  • Crash
Based on @JacquesLucke’s answer, this crash actually seems to happen when any error popup is displayed. For instance: - Open User Preferences - In main window, open a text editor and execute some invalid Python code - Switch to the preferences window without moving the mouse (e.g. `Alt + Tab`) - Open… - Don’t Save - Crash
Damien Picard changed title from Crash in filebrowser, when opening file from the user preferences or render window, and a non-existing blend file was specified before to Crash in filebrowser, when opening file from the user preferences or render window, and an error popup is displayed 2020-01-29 13:20:25 +01:00

This issue was referenced by 9cb7ecefce

This issue was referenced by 9cb7ecefceee9f1751c3794d54ad1aa3f477f0aa
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2020-01-29 15:10:32 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73487
No description provided.